--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="photo_of_the_day">Photo of the day</string>
     <string name="date_of_creation">Date of creation</string>
     <string name="description_text">Description of photo</string>
-    <string name="oops_error_occured">Oops! Error occured</string>
+    <string name="oops_error_occured">Oops! Error occured -> </string>
     <string name="search_wiki">search Wiki</string>
     <string name="wiki_helper_text">Wiki helper</string>
     <string name="two_days_ago">Two Days Ago</string>
@@ -20,4 +20,15 @@
     <string name="picture_of_the_day">Picture of the day</string>
     <string name="no_description">No description</string>
     <string name="no_photo_this_day">Nasa\'s got no photo this day(</string>
+    <string name="cosmic_weather">Cosmic weather</string>
+    <string name="mars">Mars</string>
+    <string name="earth">Earth</string>
+    <string name="photo_from_mars_id">Photo from Mars ID</string>
+    <string name="choose_the_date_from_the_period_of_fhaz_camera_mission_06_08_2012_03_06_2015">Choose the date from the period of FHAZ-camera mission: 06.08.2012 - 03.06.2015</string>
+    <string name="mars_photo">mars_photo</string>
+    <string name="mars_image_id_photo_signature">\"Mars image ID : %d \"</string>
+    <string name="tap_calendar_icon_and_choose_the_date">Tap calendar icon and choose the date</string>
+    <string name="no_caption_no_description_epic">No description provided(</string>
+    <string name="earth_photo_from_nasa_epic_collection">Earth photo from NASA EPIC collection</string>
+    <string name="epic_default_date">2021-06-03</string>
 </resources>
