--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="toast_for_favourites_fragment">Favourites will be here</string>
+    <string name="a_place_for_your_very_important_notes">A place for your very important notes</string>
+    <string name="notes">notes</string>
 </resources>
