--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,5 @@
     <string name="toast_for_favourites_fragment">Favourites will be here</string>
     <string name="a_place_for_your_very_important_notes">A place for your very important notes</string>
     <string name="notes">notes</string>
+    <string name="join_the_space_hunters">Join the Space Hunters</string>
 </resources>
